--- a/src/app/delete/categoria-delete/categoria-delete.component.html
+++ b/src/app/delete/categoria-delete/categoria-delete.component.html
@@ -19,7 +19,7 @@
 
     <div class="row">
     <div class="col-md-12 d-flex justify-content-center">
-        <button class="btn btn-danger mr-4" routerLink="/inicio">Não</button>
+        <button class="btn btn-danger mr-4" routerLink="/categoria">Não</button>
         <button class="btn btn-success" (click)="apagar()">Apagar</button>
     </div></div>
 </div>
