--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -1,25 +1,3 @@
-<<<<<<< HEAD
-<div class="container-fluid py-5">
-  <div class="container">
-    <h1 class="text-center">Editar tema {{categoria.nome}}</h1>
-
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-8">
-        <div class="form-group">
-          <label for="">Descricao</label>
-          <input type="text" name="descricao" id="tema" class="form-control" [(ngModel)]="categoria.descricao">
-        </div>
-
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-6 d-flex justify-content-around">
-            <button class="btn btn-outline-danger" routerLink="/categoria">Cancelar</button>
-            <button class="btn btn-outline-dark" (click)="atualizar()">Editar</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-=======
 <div class="container my-5">
     <div class="row">
         <div class="col-md-12">
@@ -35,10 +13,9 @@
                 <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.foto">
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
+                <button class="btn btn-danger mr-4" routerLink="/categoria">Cancelar</button>
                 <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
             </div>
         </div>
     </div>
->>>>>>> 5cf01c72e076305237cfc9f5d6d1cf4e130a1520
 </div>
