--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,72 +1,117 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>Document</title>
-</head>
-<body>
+<div class="container fredoka">
 
-</body>
-</html>
 
-<nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="contato.html">
-      <img src="../../assets/img/veggieats7.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      Veggieats
-    </a>
-  </div>
-</nav>
+  <div class="container  mb-5">
 
-    <h1 class="center">Entre em contato</h1>
+    <div>
+      <h1 class="text-center mb-5">Entre em contato</h1>
+      <p class="mb-5 text-center">uabafae</p>
 
-    <div class="container mb-50">
 
-        <div>
-            <h2>Mande uma mensagem</h2>
-            <form>
-              <div class="row">
-                <div class="col-sm-6">
-                    <label for="Nome" class="form-label">Nome</label>
-                    <input type="txt" class="form-control" id="nome" placeholder="Ex: João">
-                </div>
-                <div class="col-sm-6">
-                    <label for="Sobrenome" class="form-label">Sobrenome</label>
-                    <input type="txt" class="form-control" id="sobrenome" placeholder="Augusto">
-                </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">CONTATO</h5>
+              <p class="card-text ">Tel: (11) 3456-7890</p>
+              <p>Email: info@meusite.com</p>
+
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <label for="Email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
-                </div>
-                <div class="col-sm-6">
-                    <label for="Assunto" class="form-label">Assunto</label>
-                    <input type="txt" class="form-control" id="assunto" placeholder="">
-                </div>
-            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">ENDEREÇO</h5>
+              <p class="card-text">Av. Bernardino de Campos 98</p>
+              <p> São Paulo, SP 12345-678</p>
 
-            <div class="mb-3">
-                <label for="Dig_mesage" class="form-label">Digite sua mensagem aqui...</label>
-                <textarea class="form-control" id="Dig_mesage" rows="3"></textarea>
             </div>
-            <div class="row">
-                <div class="col-sm-4">
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">HORÁRIO</h5>
+              <p class="card-text">Seg - Sex: 7:00 - 22:00</p>
+                <p>​​Sábado: 8:00 - 22:00</p>
+                <p>Domingo: 8:00 - 23:00</p>
 
-                </div>
-                <div class="col-sm-4">
-                    <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
-                </div>
             </div>
-                </form>
+          </div>
+        </div>
+      </div>
+
+      <form>
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-6">
+            <label for="Nome" class="form-label">Nome</label>
+            <input type="txt" class="form-control" id="nome" placeholder="Ex: João">
+          </div>
+
+          <div class="col-md-6">
+            <label for="Sobrenome" class="form-label">Sobrenome</label>
+            <input type="txt" class="form-control" id="sobrenome" placeholder="Augusto">
+          </div>
+
         </div>
 
-        <div>
-            <div class="ml-50">
+        <div class="row">
+          <div class="col-sm-6">
+            <label for="Email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="name@example.com">
+          </div>
+          <div class="col-sm-6">
+            <label for="Assunto" class="form-label">Assunto</label>
+            <input type="txt" class="form-control" id="assunto" placeholder="">
+          </div>
+        </div>
 
-                <p></p>
-                <p></p>
+        <div class="mb-3">
+          <label for="Dig_mesage" class="form-label text-center">Digite sua mensagem aqui...</label>
+          <textarea class="form-control" id="Dig_mesage" rows="3">Digite sua mensagem aqui...</textarea>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
 
+          </div>
+          <div class="col-sm-6 justify-content-center">
+            <button type="submit" class="btn btn-primary mb-3">Enviar</button>
+
+            <div class=" container mb-3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.480424509091!2d-46.65261248581766!3d-23.551182967099777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce584a8a0b8cb1%3A0x1ca4ba7ea36c0373!2sR.%20Augusta%2C%20450%20-%20Consola%C3%A7%C3%A3o%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001305-000!5e0!3m2!1spt-BR!2sbr!4v1650345750403!5m2!1spt-BR!2sbr"
+                width=""
+                height=""
+                frameborder="0"
+                style="border:0;"
+                allowfullscreen=""
+                aria-hidden="false"
+                tabindex="0"
+                onmousemove="mapaZoom()"
+                onmouseout="mapanormal()"
+                id='mapa'
+                ></iframe>
+              </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
+
+    <div>
+      <div class="ml-50">
+
+
+
+
+      </div>
+    </div>
+
+
+
+
+
+
+    <p></p>
+    <p></p>
