--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -39,7 +39,7 @@
                 </select>
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
+                <button class="btn btn-danger mr-4" routerLink="/restaurante">Cancelar</button>
                 <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
             </div>
         </div>
