--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -28,7 +28,7 @@
 
         <div class="form-row">
           <div class="col">
-            <label for="texto"></label>
+            <label for="descricao"></label>
             <textarea
               [(ngModel)]="produto.descricao"
               type="text"
@@ -58,6 +58,7 @@
           <div class="col">
             <label for="tipoProduto"></label>
             <select
+            [(ngModel)]="produto.tipoProduto"
               type="text"
               class="form-control"
               name="tipoProduto"
@@ -103,6 +104,7 @@
               <div class="col-md-3">
                 <label for="foto"></label>
                 <input
+                [(ngModel)]="produto.foto"
                   class="form-control"
                   type="text"
                   name="foto"
@@ -180,121 +182,3 @@
     </div>
   </div>
 </div>
-
-<hr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="row d-flex justify-content-center">
-        <div class="col-md-3">
-          <div class="form-group">
-            <input
-              [(ngModel)]="produto.nome"
-              type="text"
-              class="form-control mt-3"
-              id="nome"
-              placeholder="Digite o nome do produto"
-            />
-            <div class="form-group">
-              <label for="texto">Descrição</label>
-              <textarea
-                [(ngModel)]="produto.descricao"
-                name="texto"
-                class="form-control"
-                id="texto"
-                rows="3"
-                placeholder="Digite aqui o que contem no seu produto..."
-              ></textarea>
-            </div>
-            <div class="form-group">
-              <input
-                [(ngModel)]="produto.foto"
-                type="text"
-                class="form-control mt-3"
-                id="foto"
-                placeholder="Digite a URL da foto do produto"
-              /.
-
-            </div>
-            <div class="form-group">
-              <label for="texto">Selecione o tipo de produto:</label>
-              <select
-                class="form-control"
-                name="tipoProduto"
-                id="tipoProduto"
-                [(ngModel)]="produto.tipoProduto"
-                >
-                 <option
-                  >Selecione uma opção</option>
-                  <option
-                  value="vegano"> Vegano</option>
-                  <option
-                  value="vegetariano"> Vegetariano</option>
-
-
-
-              </select>
-            </div>
-            <div class="form-group">
-              <input
-                [(ngModel)]="produto.estoque"
-                type="text"
-                class="form-control mt-3"
-                id="estoque"
-                placeholder="Digite a quantidade no estoque"
-              />
-            </div>
-            <div class="form-group">
-              <input
-                [(ngModel)]="produto.preco"
-                type="text"
-                class="form-control mt-3"
-                id="preco"
-                placeholder="Digite o preço do produto"
-              />
-            </div>
-            <div class="form-group">
-              <label for="texto">Escolha uma categoria</label>
-              <select
-                class="form-control"
-                name="categoria"
-                id="categoria"
-                [(ngModel)]="idCategoria"
-                (change)="findByIdCategoria()"
-              >
-                <option
-                  *ngFor="let item of listaCategorias"
-                  value="{{ item.id }}"
-                >
-                  {{ item.nome }}
-                </option>
-              </select>
-            </div>
-            <div class="d-flex justify-content-center mb-3">
-              <button class="btn btn-light" (click)="publicar()">
-                Cadastrar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--  -->
-
