--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid my-4">
+<div class="container-fluid my-4 fredoka">
     <div class="container">
       <div class="row">
-        <h3 class='text-danger'>Minhas compras</h3>
+        <h3 class='text-verde'>Minhas Compras</h3>
       </div>
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-7">
@@ -9,13 +9,11 @@
             <div class="col-3 p-0 m-0">
               <img [src]="item.foto" alt="" class="produtoFoto rounded" >
             </div>
-            <!-- <div class="col-6 d-flex flex-column justify-content-center">
+            <div class="col-6 d-flex flex-column justify-content-center">
               <div class="row">
                 <h5 class=''>{{item.nome}}</h5>
-                <p>Plataforma: {{item.categoria.nome}}</p>
-                <p class='m-0'>Publisher: Ubisoft</p>
               </div>
-            </div> -->
+            </div>
             <div class="col-3">
               <div class="row d-flex justify-content-center align-items-center h-100">
                 <h5 class="text-center"> {{item.preco | currency: "BRL"}}</h5>
@@ -28,14 +26,13 @@
             <div class="col-12">
               <div class="row d-flex justify-content-center align-items-center">
                 <h5 class="text-center">Total: {{total() | currency: "BRL"}}</h5>
-                <p class='text-center'>em até 12 parcelas de: {{parcela() | currency: "BRL"}}</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <div class="row">
-                <button class="btn btn-danger btn-block">Finalizar compra</button>
+                <button class="btn btn-verde btn-block">Finalizar compra</button>
               </div>
             </div>
           </div>
